# Yet-Another-Alt-Tab

./: .gitignore  CMakeLists.txt  LICENSE  Overview.md  README.md
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: SearchEngine.cpp  SearchEngine.h  WindowInfo.h  WindowScanner.cpp  WindowScanner.h
src/hotkey/: HotkeyManager.cpp  HotkeyManager.h
src/ui/: OverlayWindow.cpp  OverlayWindow.h
